--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="../odin-recipes/recipes/maggie.html">Maggie Recipe</a>
   </body>
 </html>
