Maggi recipe added

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Maggie Recipe</h1>
-    
+    <h1>Veg Sandwich</h1>
+    <img src="../images/sandwich.webp" width="400px">
 </body>
 </html>
