Sandwich recipe added

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Veg Sandwich</h1>
-    <img src="../images/sandwich.webp" width="400px">
-</body>
+    <img src="../images/sandwich.webp" width="400px" />
+    <h3>Veg Sandwich</h3>
+    <p>
+      Sandwich, in its basic form, slices of meat, cheese, or other food placed
+      between two slices of bread.
+    </p>
+    <p>
+      Although this mode of consumption must be as old as meat and bread, the
+      name was adopted only in the 18th century for John Montagu, 4th earl of
+      Sandwich.
+    </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>2 slices whole-grain bread</li>
+      <li>1 tablespoon hummus</li>
+      <li>2 slices tomato</li>
+      <li>1/2 small cucumber, thinly sliced lengthwise</li>
+      <li>1 slice low-fat cheese</li>
+
+      <h3>Steps:</h3>
+
+      <ol>
+        <li>firstly, in a large kadai heat oil and fry onions.</li>
+        <li>
+          further add corn, carrot and capsicum. fry for a minute till the
+          veggies are half cooked yet crunchy.
+        </li>
+        <li>now add chopped spinach and fry till they shrink in size.</li>
+        <li>also add pepper, mixed herbs and salt. give a good mix.</li>
+        <li>
+          now take 2 breads and on one spread tomato sauce and green chutney on
+          the other.
+        </li>
+        <li>
+          also place the prepared stuffing and spread uniformly on the bread
+          slice.
+        </li>
+        <li>further, grate the cheese over the stuffing.</li>
+        <li>cover with the other slice of bread and grill or toast on tawa.</li>
+        <li>
+          spread butter on both the outer sides of bread to make sandwich more
+          crispy and golden.
+        </li>
+        <li>
+          furthermore, close the griller and grill till the cheese melts and
+          bread turn golden brown.
+        </li>
+        <li>now cut the bread into half and serve.</li>
+        <li>finally, serve hot or pack for kids lunch box.</li>
+      </ol>
+    </ul>
+  </body>
 </html>
