lassi recipe added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/maggie.html">Maggie Recipe</a>
+    <img
+      src="../odin-recipes/images/food-lover.jpeg"
+      width="650px"
+      height="400px"
+    />
+    <br />
+    <h3>My favourite food Recipes</h3>
+    <ul>
+      <li><a href="../odin-recipes/recipes/maggi.html">Maggi Recipe</a></li>
+      <li><a href="../odin-recipes/recipes/sandwich.html">Sandwich Recipe</a></li>
+      <li><a href="../odin-recipes/recipes/lassi.html">Lassi Recipe</a></li>
+    <ul>
   </body>
 </html>
